Working mdis to new spec
